--- a/ELA.FFW461.Controls/ELA.FFW461.Controls.csproj
+++ b/ELA.FFW461.Controls/ELA.FFW461.Controls.csproj
@@ -4,16 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CF1A7347-AD57-49B2-BA8E-7390B195A4E8}</ProjectGuid>
+    <ProjectGuid>{7C88876A-DC92-4726-8EE0-14314526D044}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DW.ELA.Plugin.EDSM</RootNamespace>
-    <AssemblyName>DW.ELA.Plugin.EDSM</AssemblyName>
+    <RootNamespace>ELA.FFW461.Controls</RootNamespace>
+    <AssemblyName>ELA.FFW461.Controls</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <LangVersion>8.0</LangVersion>
-    <NullableContextOptions>enable</NullableContextOptions>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,63 +33,55 @@
     <Reference Include="MoreLinq, Version=3.3.2.0, Culture=neutral, PublicKeyToken=384d532d7e88985d, processorArchitecture=MSIL">
       <HintPath>..\packages\morelinq.3.3.2\lib\net451\MoreLinq.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.7.0\lib\net45\NLog.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\GlobalSuppressions.cs">
-      <Link>GlobalSuppressions.cs</Link>
+    <Compile Include="AbstractSettingsControl.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="EdsmApiException.cs" />
-    <Compile Include="EdsmApiFacade.cs" />
-    <Compile Include="EdsmEventConverter.cs" />
-    <Compile Include="EdsmPlugin.cs" />
-    <Compile Include="EdsmSettings.cs" />
-    <Compile Include="IEdsmApiFacade.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="MultiCmdrApiKeyControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Controller\DW.ELA.Controller.csproj">
-      <Project>{14C53350-191B-4367-BEC4-7B749E7B1EEB}</Project>
+      <Project>{14c53350-191b-4367-bec4-7b749e7b1eeb}</Project>
       <Name>DW.ELA.Controller</Name>
     </ProjectReference>
     <ProjectReference Include="..\DW.ELA.Utility\DW.ELA.Utility.csproj">
       <Project>{93dcdb11-335d-400c-bd87-554a0c1e2cee}</Project>
       <Name>DW.ELA.Utility</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ELA.FFW461.Controls\ELA.FFW461.Controls.csproj">
-      <Project>{7c88876a-dc92-4726-8ee0-14314526d044}</Project>
-      <Name>ELA.FFW461.Controls</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Interfaces\DW.ELA.Interfaces.csproj">
-      <Project>{FD518ED2-7A6E-42F7-8C90-603235C1FEE6}</Project>
+      <Project>{fd518ed2-7a6e-42f7-8c90-603235c1fee6}</Project>
       <Name>DW.ELA.Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
