--- a/ELA.Plugin.EDCC/ELA.Plugin.EDCC.csproj
+++ b/ELA.Plugin.EDCC/ELA.Plugin.EDCC.csproj
@@ -4,16 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A9E8BE2A-1256-4933-AC2C-C2CE7AB26900}</ProjectGuid>
+    <ProjectGuid>{029731FD-C955-4C51-94AA-6D9E188E8C5C}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DW.ELA.Plugin.EDDN</RootNamespace>
-    <AssemblyName>DW.ELA.Plugin.EDDN</AssemblyName>
+    <RootNamespace>ELA.Plugin.EDCC</RootNamespace>
+    <AssemblyName>ELA.Plugin.EDCC</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <LangVersion>8.0</LangVersion>
-    <NullableContextOptions>enable</NullableContextOptions>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,17 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Castle.Core.4.4.1\lib\net45\Castle.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Namotion.Reflection, Version=1.0.11.0, Culture=neutral, PublicKeyToken=c2f9c3bdfae56102, processorArchitecture=MSIL">
-      <HintPath>..\packages\Namotion.Reflection.1.0.11\lib\net45\Namotion.Reflection.dll</HintPath>
+    <Reference Include="MoreLinq, Version=3.3.2.0, Culture=neutral, PublicKeyToken=384d532d7e88985d, processorArchitecture=MSIL">
+      <HintPath>..\packages\morelinq.3.3.2\lib\net451\MoreLinq.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="NJsonSchema, Version=10.1.15.0, Culture=neutral, PublicKeyToken=c2f9c3bdfae56102, processorArchitecture=MSIL">
-      <HintPath>..\packages\NJsonSchema.10.1.15\lib\net45\NJsonSchema.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.7.0\lib\net45\NLog.dll</HintPath>
@@ -51,62 +42,42 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.Net" />
+    <Reference Include="System.IO.Compression, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
-    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\GlobalSuppressions.cs">
-      <Link>GlobalSuppressions.cs</Link>
-    </Compile>
-    <Compile Include="EddnSettingsControl.cs">
+    <Compile Include="EDCCPlugin.cs" />
+    <Compile Include="EDCCSettingsControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="EddnSettingsControl.Designer.cs">
-      <DependentUpon>EddnSettingsControl.cs</DependentUpon>
+    <Compile Include="EDCCSettingsControl.Designer.cs">
+      <DependentUpon>EDCCSettingsControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\Commodity.cs" />
-    <Compile Include="Model\CommodityEvent.cs" />
-    <Compile Include="EddnApiFacade.cs" />
-    <Compile Include="Model\CommodityMessage.cs" />
-    <Compile Include="Model\Economy.cs" />
-    <Compile Include="Model\EddnEvent.cs" />
-    <Compile Include="EddnEventConverter.cs" />
-    <Compile Include="EddnPlugin.cs" />
-    <Compile Include="EddnSettings.cs" />
-    <Compile Include="EventSchemaValidator.cs" />
-    <Compile Include="IEddnApiFacade.cs" />
-    <Compile Include="EddnJournalEvent.cs" />
-    <Compile Include="Model\OutfittingEvent.cs" />
-    <Compile Include="Model\OutfittingMessage.cs" />
-    <Compile Include="Model\ShipyardEvent.cs" />
-    <Compile Include="Model\ShipyardMessage.cs" />
+    <Compile Include="EDCCSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="EddnSettingsControl.resx">
-      <DependentUpon>EddnSettingsControl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Schemas\blackmarket-v1.0.json" />
-    <EmbeddedResource Include="Schemas\commodity-v3.0.json" />
-    <EmbeddedResource Include="Schemas\journal-v1.0.json" />
-    <EmbeddedResource Include="Schemas\outfitting-v2.0.json" />
-    <EmbeddedResource Include="Schemas\shipyard-v2.0.json" />
+    <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Controller\DW.ELA.Controller.csproj">
-      <Project>{14C53350-191B-4367-BEC4-7B749E7B1EEB}</Project>
+      <Project>{14c53350-191b-4367-bec4-7b749e7b1eeb}</Project>
       <Name>DW.ELA.Controller</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DW.ELA.Utility\DW.ELA.Utility.csproj">
+      <Project>{93dcdb11-335d-400c-bd87-554a0c1e2cee}</Project>
+      <Name>DW.ELA.Utility</Name>
     </ProjectReference>
     <ProjectReference Include="..\ELA.FFW461.Controls\ELA.FFW461.Controls.csproj">
       <Project>{7c88876a-dc92-4726-8ee0-14314526d044}</Project>
@@ -116,10 +87,9 @@
       <Project>{fd518ed2-7a6e-42f7-8c90-603235c1fee6}</Project>
       <Name>DW.ELA.Interfaces</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DW.ELA.Utility\DW.ELA.Utility.csproj">
-      <Project>{93DCDB11-335D-400C-BD87-554A0C1E2CEE}</Project>
-      <Name>DW.ELA.Utility</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
